[package]
name = "orchard-postfiat"
version = "0.1.0"
edition = "2021"
authors = ["PostFiat Developers"]
description = "Orchard/Halo2 privacy integration for PostFiat"
license = "MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Orchard and Halo2 cryptography
orchard = "0.7"
halo2_proofs = "0.3"
pasta_curves = "0.5"
group = "0.13"

# FFI and serialization
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

# Utilities
hex = "0.4"
blake2b_simd = "1.0"

[build-dependencies]
cxx-build = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

# For faster compile times during development
[profile.dev.package."*"]
opt-level = 2
