[package]
name = "orchard-postfiat"
version = "0.1.0"
edition = "2021"
authors = ["PostFiat Developers"]
description = "Orchard/Halo2 privacy integration for PostFiat"
license = "MIT"

[lib]
crate-type = ["staticlib"]

[[bin]]
name = "generate_test_bundle"
path = "src/bin/generate_test_bundle.rs"
required-features = ["test-utils"]

[features]
test-utils = []

[dependencies]
# Orchard and Halo2 cryptography
orchard = "0.11"
halo2_proofs = "0.3"
pasta_curves = "0.5"
group = "0.13"

# Zcash primitives for serialization and types
zcash_primitives = { version = "0.26", features = ["transparent-inputs"] }
zcash_protocol = "0.7"
zcash_note_encryption = "0.4"

# FFI and serialization
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

# Utilities
hex = "0.4"
blake2b_simd = "1.0"
rand = "0.8"  # For bundle generation in tests
incrementalmerkletree = "0.8"  # For Merkle tree operations

[build-dependencies]
cxx-build = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

# For faster compile times during development
[profile.dev.package."*"]
opt-level = 2
